# kiz

./: .gitignore  CMakeLists.txt  README.md  syntaxes.ebnf  xmake.lua
.github/workflows/: build-kiz.yml
depends/: decimal.hpp  hashmap.hpp  u8str.hpp
docs/: kiz库开发指南.md  xmake构建教程.md  使用ai写kiz程序指南.md  内置对象&库速览.md  提交指南.md  语法特性速览.md
examples/: animal.kiz  calc.kiz  fib_test.kiz  finally.kiz  for_loop_test.kiz  range_iter.kiz  rest_param.kiz  simple_oop.kiz  traceback_test.kiz  恭喜恭喜.kiz
include/: kiz.hpp  lexer.hpp  models.hpp  opcode.hpp  vm.hpp
libs/builtins/: bool_methods.cpp  bool_obj.cpp  builtin_functions.cpp  builtins_lib.cpp  dict_methods.cpp  dict_obj.cpp  int_methods.cpp  int_obj.cpp  list_methods.cpp  list_obj.cpp  nil_methods.cpp  object_methods.cpp  rational_methods.cpp  rational_obj.cpp  str_methods.cpp  str_obj.cpp
libs/builtins/builtin_functions/: builtin_functions.hpp
libs/builtins/include/: builtin_functions.hpp  builtin_methods.hpp  builtins_lib.hpp
libs/io/: io_lib.cpp
libs/math/include/: math_lib.hpp
libs/os/: os_lib.cpp
libs/os/include/: os_lib.hpp
src/: kiz.hpp  main.cpp  wasm_interface.cpp
src/error/: error_reporter.cpp  error_reporter.hpp  src_manager.cpp  src_manager.hpp
src/ir_gen/: gen_expr.cpp  gen_stmt.cpp  ir_gen.cpp
src/lexer/: lexer.cpp  lexer.hpp  read_string.cpp
src/models/: models.hpp
src/op_code/: opcode.hpp
src/parser/: ast.hpp  parse_expr.cpp  parse_stmt.cpp  parser.cpp  parser.hpp
src/repl/: color.cpp  color.hpp  repl.cpp  repl.hpp  repl_readline.cpp
src/util/: src_manager.cpp  src_manager.hpp
src/vm/: entry_builtins.cpp  entry_std_modules.cpp  exec_calc.cpp  exec_call.cpp  exec_get_set.cpp  exec_import.cpp  exec_misc.cpp  execute_unit.cpp  handle_call.cpp  handle_error.cpp  handle_import.cpp  handle_make.cpp  registering_std_modules.cpp  vm.cpp  vm.hpp
